# prefrontal

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: classifier_benchmark.rs
models/onnx-minilm/: model.onnx
src/: classifier.rs  lib.rs  main.rs  runtime.rs
src/classifier/: builder.rs  embedding.rs  error.rs  mod.rs  model.rs  utils.rs
src/rust/: lib.rs  main.rs  model_manager.rs  models.rs  runtime.rs
src/rust/classifier/: builder.rs  classifier.rs  embedding.rs  error.rs  mod.rs  model.rs
tests/: classifier_test.rs  integration_tests.rs  model_manager_test.rs  validation_test.rs
tests/integration/: classifier_test.rs
tests/rust/: integration_tests.rs  mod.rs
tests/rust/integration/: classifier_test.rs  mod.rs
tests/rust/unit/: classifier_test.rs  main_test.rs  mod.rs
tests/unit/: classifier_test.rs  main_test.rs
