[package]
name = "text_classifier"
version = "0.1.0"
edition = "2021"

[lib]
name = "text_classifier"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "text_classifier_bin"
path = "src/main.rs"

[features]
default = []

[dependencies]
# Core dependencies
tokenizers = "0.15"
ort = "1.16.3"
ndarray = "0.15"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
cbindgen = "0.26"
tokio = { version = "1.36", features = ["full"] }
lazy_static = "1.4"

[[bench]]
name = "classifier_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[build-dependencies]
cbindgen = "0.26"

# Only use panic=abort in release mode
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"
