[package]
name = "prefrontal"
version = "0.1.0"
edition = "2021"
authors = ["Anupom Syam <anupom.syam@gmail.com>"]
description = "A blazing fast text classifier for real-time agent routing, built in Rust"
documentation = "https://docs.rs/prefrontal"
homepage = "https://axar.ai"
repository = "https://github.com/axar-ai/prefrontal"
readme = "README.md"
license = "Apache-2.0"
keywords = ["nlp", "classification", "machine-learning", "text-processing", "routing", "agent"]
categories = ["text-processing", "ai", "algorithms"]

[lib]
name = "prefrontal"
path = "src/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "prefrontal_bin"
path = "src/rust/main.rs"

[features]
default = []

[dependencies]
# Core dependencies
tokenizers = "0.15"
ort = "2.0.0-rc.9"
ndarray = "0.16"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
cbindgen = "0.26"
tokio = { version = "1.36", features = ["full"] }
lazy_static = "1.4"
reqwest = { version = "0.12.12", features = ["json"] }
sha2 = "0.10.8"
dirs = "6.0.0"
clap = { version = "4.5", features = ["derive"] }

[[bench]]
name = "classifier_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tokio = { version = "1.36", features = ["full", "test-util"] }

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
panic = "unwind"

